# Utf8Monoid

./: CHANGELOG.md  README.md  Utf8Monoid.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
src/: Utf8Monoid.hs
test/Test/: Utf8Monoid.hs
