cabal-version:       2.4
name:                Utf8Monoid
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/axman6/Utf8Monoid
bug-reports:         https://github.com/axman6/Utf8Monoid/issues
license:             MIT
license-file:        LICENSE
author:              Alex Mason
maintainer:          Alex Mason <github@me.axman6.com>
copyright:           2021 Alex Mason
category:            Text
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/axman6/Utf8Monoid.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                    ,  text
                    ,  QuickCheck

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  OverloadedLists
                       LambdaCase
                       ScopedTypeVariables
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Utf8Monoid

executable Utf8Monoid
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       Utf8Monoid
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite Utf8Monoid-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Utf8Monoid
  build-depends:       Utf8Monoid
                    ,  tasty
                    ,  tasty-hunit
                    ,  tasty-quickcheck
                    ,  tasty-quickcheck-laws
                    ,  tasty-discover
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark Utf8Monoid-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , Utf8Monoid
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
